<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >
    <!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		measurestart
     *	@date 		Monday 11th of March 2024 08:52:20 AM
     *	@title 		Page 1
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->
    <ScrollView android:id="@+id/measurestart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/background"
                android:layout_width="360dp"
                android:layout_height="800dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="background"
                android:src="@drawable/background" />


            <View   android:id="@+id/capbox"
                android:background="@drawable/capbox"
                android:layout_marginStart="30dp"
                android:layout_marginTop="225dp"
                android:layout_width="302dp"
                android:layout_height="431dp" />


            <ImageView android:id="@+id/kwlogo"
                android:src="@drawable/kwlogo"
                android:contentDescription="kwlogo"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="34dp"
                android:layout_width="87.62dp"
                android:layout_height="64dp" />

            <ImageView android:id="@+id/logo2"
                android:src="@drawable/logo2"
                android:contentDescription="logo2"
                android:layout_marginStart="74dp"
                android:layout_marginTop="44dp"
                android:layout_width="44dp"
                android:layout_height="44dp" />

            <ImageView android:id="@+id/bsllogo"
                android:src="@drawable/bsllogo"
                android:contentDescription="bsllogo"
                android:layout_marginStart="74dp"
                android:layout_marginTop="45dp"
                android:layout_width="45dp"
                android:layout_height="43.84dp" />

            <TextView android:id="@+id/capstonetext"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/capstonetext_color"
                android:layout_marginLeft="179dp"
                android:layout_marginTop="58dp"
                android:layout_width="183.2dp"
                android:layout_height="23.2dp"
                android:text="@string/_2024capstone_string"
                />

            <View   android:id="@+id/top"
                android:background="@drawable/top"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="360dp"
                android:layout_height="25dp" />

            <View   android:id="@+id/bottom"
                android:background="@drawable/bottom"
                android:layout_marginStart="0dp"
                android:layout_marginTop="775dp"
                android:layout_width="360dp"
                android:layout_height="25dp" />

            <View   android:id="@+id/resultbox"
                android:background="@drawable/resultbox"
                android:layout_marginStart="43dp"
                android:layout_marginTop="132dp"
                android:layout_width="274dp"
                android:layout_height="60dp" />

            <TextView android:id="@+id/resulttext"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="#FF000000"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="134dp"
                android:layout_width="182dp"
                android:layout_height="52dp"
                android:text="@string/resulttext_string"
                />

            <TextView android:id="@+id/material"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="#FF000000"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="598dp"
                android:layout_width="257dp"
                android:layout_height="59dp"
                android:text="@string/material_string"
                />


            <RelativeLayout android:id="@+id/group_1"
                android:layout_marginTop="699dp"
                android:layout_marginStart="290dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >


                <View   android:id="@+id/list"
                    android:background="@drawable/listback"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="55dp"
                    android:layout_height="55dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/group_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="699dp">

            </RelativeLayout>

            <ImageView android:id="@+id/free_icon_capacitor_4505420_1"
                android:src="@drawable/free_icon_capacitor_4505420_1"
                android:contentDescription="free_icon_capacitor_4505420_1"
                android:layout_marginStart="27dp"
                android:layout_marginTop="234dp"
                android:layout_width="305dp"
                android:layout_height="344dp" />

            <TextView android:id="@+id/captext"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="70sp"
                android:textColor="#FF000000"
                android:layout_marginLeft="82dp"
                android:layout_marginTop="299dp"
                android:layout_width="184dp"
                android:layout_height="128dp"
                android:text="@string/captext_string"
                />

            <ImageView android:id="@+id/free_icon_task_list_6800733_1"
                android:src="@drawable/free_icon_task_list_6800733_1"
                android:contentDescription="free_icon_task_list_6800733_1"
                android:layout_marginStart="295dp"
                android:layout_marginTop="704dp"
                android:layout_width="45dp"
                android:layout_height="45dp" />

            <ImageButton
                android:id="@+id/back4_button"
                android:layout_marginTop="699dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="TODO" />

        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>