<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">


	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ImageView
			android:id="@+id/background"
			android:src="@drawable/background"
			android:contentDescription="background"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginRight="0dp"
			android:scaleType="fitXY" />


		<TextView
			android:id="@+id/tvBluetoothStatus"
			android:layout_width="170dp"
			android:layout_height="20dp"
			android:layout_marginTop="90dp"
			android:layout_marginStart="20dp"
			android:text="status"

			/>

		<ImageButton
			android:id="@+id/resultbox"
			android:layout_width="250dp"
			android:layout_height="60dp"
			android:layout_marginTop="630dp"
			android:layout_marginStart="80dp"
			android:background="@drawable/resultbox" />

		<TextView
			android:id="@+id/resulttext"
			android:layout_width="182dp"
			android:layout_height="52dp"
			android:layout_marginTop="630dp"
			android:layout_marginStart="120dp"
			android:text="@string/starttext_string"
			android:textColor="@color/black"
			android:textSize="30sp" />

		<ImageButton
			android:id="@+id/btnConnect"
			android:layout_width="250dp"
			android:layout_height="60dp"
			android:layout_gravity="center_horizontal|center"
			android:layout_marginLeft="80dp"
			android:layout_marginTop="120dp"
			android:background="@drawable/resultbox"
			android:src="@drawable/resultbox"
			android:textColor="#FF000000" />

		<TextView
			android:id="@+id/button_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="30sp"
			android:textColor="#FF000000"
			android:layout_marginLeft="160dp"
			android:layout_marginTop="125dp"
			android:text="@string/bluetooth_string" />

		<View   android:id="@+id/capbox"
			android:background="@drawable/capbox"
			android:layout_marginStart="30dp"
			android:layout_marginTop="195dp"
			android:layout_width="340dp"
			android:layout_height="400dp" />

		<ImageView android:id="@+id/free_icon_capacitor_4505420_1"
			android:src="@drawable/free_icon_capacitor_4505420_1"
			android:contentDescription="free_icon_capacitor_4505420_1"
			android:layout_marginStart="30dp"
			android:layout_marginTop="225dp"
			android:layout_width="340dp"
			android:layout_height="330dp" />

		<TextView
			android:id="@+id/tvReceiveData"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Receive"
			android:layout_marginTop="290dp"
			android:layout_marginStart="140dp"
			android:textSize="35dp" />

		<ImageView
			android:id="@+id/image_4"
			android:layout_width="45dp"
			android:layout_height="45dp"
			android:layout_marginTop="130dp"
			android:layout_marginStart="83dp"
			android:contentDescription="image_4"
			android:src="@drawable/image_4" />

		<View
			android:id="@+id/top"
			android:layout_width="410dp"
			android:layout_height="25dp"
			android:layout_marginStart="0dp"
			android:layout_marginTop="0dp"
			android:background="@drawable/top" />

		<View   android:id="@+id/bottom"
			android:background="@drawable/top"
			android:layout_marginStart="0dp"
			android:layout_marginTop="705dp"
			android:layout_width="410dp"
			android:layout_height="25dp" />

		<RelativeLayout android:id="@+id/group_3"
			android:layout_marginTop="680dp"
			android:layout_marginStart="15dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>


			<ImageButton
				android:id="@+id/back3_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginBottom="20dp"
				android:background="@android:color/transparent"
				android:src="@drawable/back"
				android:layout_alignParentStart="true"
				android:layout_alignParentBottom="true"
				android:contentDescription="TODO" />


		</RelativeLayout>

		<ImageButton
			android:id="@+id/list"
			android:layout_width="55dp"
			android:layout_height="55dp"
			android:layout_marginStart="340dp"
			android:layout_marginTop="750dp"
			android:layout_marginBottom="0dp"
			android:background="@android:color/transparent"
			android:src="@drawable/listback"
			android:layout_alignParentStart="true"
			android:layout_alignParentBottom="true"
			android:contentDescription="TODO" />

		<TextView
			android:id="@+id/_2024capstone"
			android:layout_gravity="center_horizontal|center"
			android:gravity="center"
			android:textSize="12sp"
			android:textColor="@color/_bg__firstpage1_color"
			android:layout_marginLeft="220dp"
			android:layout_marginTop="58dp"
			android:layout_width="183.2dp"
			android:layout_height="23.2dp"
			android:text="@string/_2024capstone_string"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ImageView android:id="@+id/kwlogo"
			android:src="@drawable/kwlogo"
			android:contentDescription="kwlogo"
			android:layout_marginStart="-4dp"
			android:layout_marginTop="34dp"
			android:layout_width="87.62dp"
			android:layout_height="64dp" />

		<ImageView android:id="@+id/logo2"
			android:src="@drawable/logo2"
			android:contentDescription="logo2"
			android:layout_marginStart="74dp"
			android:layout_marginTop="44dp"
			android:layout_width="44dp"
			android:layout_height="44dp" />

		<ImageView android:id="@+id/bsllogo"
			android:src="@drawable/bsllogo"
			android:contentDescription="logo2"
			android:layout_marginStart="74dp"
			android:layout_marginTop="45dp"
			android:layout_width="45dp"
			android:layout_height="43.84dp" />
	</RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>